{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 127,
  "lineage": "f6978cbf-6b40-739b-3edd-7b2706604e1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-0b012c3ca06b721c6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b012c3ca06b721c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "endpoint-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-074cdfc540aa582cd",
            "private_dns": "ip-20-15-10-28.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.15.10.28",
            "public_dns": "ec2-44-202-213-43.compute-1.amazonaws.com",
            "public_ip": "44.202.213.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a701fd7ac341ab6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02db897305f4b543e",
            "tags": {
              "Name": "Pub-Server-1"
            },
            "tags_all": {
              "Name": "Pub-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076f7f0aec83af614"
            ]
          },
          "dependencies": [
            "aws_key_pair.endpoint",
            "aws_security_group.ni-sg",
            "aws_subnet.end-sub1",
            "aws_vpc.vpc-end",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:975266691648:instance/i-0ffe66b2d9cc033ba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffe66b2d9cc033ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "endpoint-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-003f373f1e1af9ed5",
            "private_dns": "ip-20-15-112-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.15.112.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c43da74312c0de3c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cffd7198252a03a9",
            "tags": {
              "Name": "Priv-Server-2"
            },
            "tags_all": {
              "Name": "Priv-Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076f7f0aec83af614"
            ]
          },
          "dependencies": [
            "aws_key_pair.endpoint",
            "aws_security_group.ni-sg",
            "aws_subnet.end-sub2",
            "aws_vpc.vpc-end",
            "data.aws_ami.demo_ser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "end-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:internet-gateway/igw-09a21e126597ba6bf",
            "id": "igw-09a21e126597ba6bf",
            "owner_id": "975266691648",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0982cb04d510719bb"
          },
          "dependencies": [
            "aws_vpc.vpc-end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ni-end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:network-interface/eni-0e941bd5ec17368d9",
            "id": "eni-0e941bd5ec17368d9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:52:a2:07:c9:cd",
            "owner_id": "975266691648",
            "private_dns_name": "ip-20-15-10-100.ec2.internal",
            "private_ip": "20.15.10.100",
            "private_ip_list": [
              "20.15.10.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.15.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-076f7f0aec83af614"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02db897305f4b543e",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.ni-sg",
            "aws_subnet.end-sub1",
            "aws_vpc.vpc-end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:route-table/rtb-00afad3f2c9bfb6dc",
            "id": "rtb-00afad3f2c9bfb6dc",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a21e126597ba6bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_pub_1"
            },
            "tags_all": {
              "Name": "my_pub_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0982cb04d510719bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.end-gw",
            "aws_vpc.vpc-end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:route-table/rtb-09d1b7d97338b2c13",
            "id": "rtb-09d1b7d97338b2c13",
            "owner_id": "975266691648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a21e126597ba6bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_priv_1"
            },
            "tags_all": {
              "Name": "my_priv_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0982cb04d510719bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.end-gw",
            "aws_vpc.vpc-end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0005c930d3adc35c7",
            "route_table_id": "rtb-00afad3f2c9bfb6dc",
            "subnet_id": "subnet-02db897305f4b543e"
          },
          "dependencies": [
            "aws_internet_gateway.end-gw",
            "aws_route_table.rt-sub1",
            "aws_subnet.end-sub1",
            "aws_vpc.vpc-end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07be2d338a5d3d2b5",
            "route_table_id": "rtb-09d1b7d97338b2c13",
            "subnet_id": "subnet-0cffd7198252a03a9"
          },
          "dependencies": [
            "aws_internet_gateway.end-gw",
            "aws_route_table.rt-sub2",
            "aws_subnet.end-sub2",
            "aws_vpc.vpc-end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ni-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:security-group/sg-076f7f0aec83af614",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076f7f0aec83af614",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "975266691648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "end-sg"
            },
            "tags_all": {
              "Name": "end-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0982cb04d510719bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "end-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-02db897305f4b543e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.15.10.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02db897305f4b543e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-E1"
            },
            "tags_all": {
              "Name": "Subnet-E1"
            },
            "vpc_id": "vpc-0982cb04d510719bb"
          },
          "dependencies": [
            "aws_vpc.vpc-end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "end-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:subnet/subnet-0cffd7198252a03a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.15.112.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cffd7198252a03a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975266691648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-E2"
            },
            "tags_all": {
              "Name": "Subnet-E2"
            },
            "vpc_id": "vpc-0982cb04d510719bb"
          },
          "dependencies": [
            "aws_vpc.vpc-end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:vpc/vpc-0982cb04d510719bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.15.0.0/16",
            "default_network_acl_id": "acl-0d9381ee30d757174",
            "default_route_table_id": "rtb-02d1f9d6ed0ed8cc6",
            "default_security_group_id": "sg-0a97756c459ba134d",
            "dhcp_options_id": "dopt-00b696a765a7e9c3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0982cb04d510719bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d1f9d6ed0ed8cc6",
            "owner_id": "975266691648",
            "tags": {
              "Name": "VPC-Demo"
            },
            "tags_all": {
              "Name": "VPC-Demo"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975266691648:vpc-endpoint/vpce-068f6b140be6cebcc",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-068f6b140be6cebcc",
            "owner_id": "975266691648",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "Terra-VPE"
            },
            "tags_all": {
              "Environment": "Terra-VPE"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0982cb04d510719bb"
          },
          "dependencies": [
            "aws_s3_bucket.endpoint-s3",
            "aws_vpc.vpc-end"
          ]
        }
      ]
    }
  ]
}